Centered app and fixed temp alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,17 +3,19 @@ h1 {
   left: 82px;
   top: -58px;
 }
+
 a {
   text-decoration: none;
 }
 
 .city-name {
   font-weight: 600;
+  font-size: 25px;
 }
 .content-border {
   max-width: 700px;
   padding: 20px;
-  margin: 40px 0px 0px;
+  margin: 40px auto;
   border: 1px solid black;
   max-height: 480px;
   border-radius: 5px;
@@ -36,6 +38,7 @@ a {
 .city-info li {
   font-size: 18px;
 }
+
 .moisture {
   position: relative;
   padding: 0;
@@ -54,8 +57,8 @@ a {
 
 .temp-type {
   position: relative;
-  top: -110px;
-  left: 142px;
+  top: -106px;
+  left: 135px;
   text-decoration: none;
   font-size: 18px;
 }
@@ -86,4 +89,5 @@ a {
 }
 .footer {
   font-size: 14px;
+  text-align: center;
 }
